# agent

./: .output.txt  Cargo.toml  README.md  install.sh  render.yaml
.agtx/: config.toml
.agtx/plugins/gsd/: plugin.toml
.agtx/worktrees/0164bbfb-scan-my-codebase/.agtx/skills/agtx-orchestrate/: SKILL.md
.agtx/worktrees/74e624a0-codebase/.agtx/skills/agtx-plan/: SKILL.md
.agtx/worktrees/74e624a0-codebase/.agtx/skills/agtx-research/: SKILL.md
.agtx/worktrees/ce5d5e7c-scan-my-codebase/.agtx/skills/agtx-execute/: SKILL.md
.agtx/worktrees/ce5d5e7c-scan-my-codebase/.agtx/skills/agtx-merge-conflicts/: SKILL.md
.junie/: AGENTS.md  psudocode.yaml
docs/beyond-git-worktrees/: README.md
src/: app.rs  cli.rs  git.rs  main.rs  tasks.rs  terminal.rs  text.rs  ui.rs
src/app/: input.rs  mod.rs  run.rs  state.rs
src/models/: mod.rs  task.rs
src/runner/: agent.rs  git_utils.rs  git_utils.rs.tmp  merge.rs  mod.rs  overlay.rs  recovery.rs  store.rs  text_utils.rs
src/ui/: view.rs
workflows-demo/: .env.example  .gitignore
