[package]
name = "junie"
version = "0.1.0"
edition = "2024"
description = "Small TUI app to run Junie tasks in git worktrees"
readme = "README.md"

[dependencies]
arboard = "3.6.1"
crossterm = "0.29.0"
futures = "0.3.32"
notify = "8.2.0"
ratatui = "0.30.0"
tokio = { version = "1.52.0", features = ["full", "macros", "rt-multi-thread"] }
